--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,6 @@ button.newline {
 
 .input {
   clear: both;
-  width: 1042px;
   margin: 20px;
 }
 
